ass5_18CS10062_18CS10067/y.output
Terminals unused in grammar

   HASH
   TYPEDEF
   UNION
   STRUCT


Grammar

    0 $accept: translation_unit $end

    1 M: %empty

    2 N: %empty

    3 primary_expression: IDENTIFIER
    4                   | INTEGER_CONSTANT
    5                   | FLOAT_CONSTANT
    6                   | CHARACTER_CONSTANT
    7                   | STRING_LITERAL
    8                   | ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE

    9 postfix_expression: primary_expression
   10                   | postfix_expression SQUARE_BRACKET_OPEN expression SQUARE_BRACKET_CLOSE
   11                   | postfix_expression ROUND_BRACKET_OPEN argument_expression_list_opt ROUND_BRACKET_CLOSE
   12                   | postfix_expression DOT IDENTIFIER
   13                   | postfix_expression IMPLIES IDENTIFIER
   14                   | postfix_expression UNARY_INCREMENT
   15                   | postfix_expression UNARY_DECREMENT
   16                   | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE CURLY_BRACKET_OPEN initializer_list CURLY_BRACKET_CLOSE
   17                   | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE CURLY_BRACKET_OPEN initializer_list COMMA CURLY_BRACKET_CLOSE

   18 argument_expression_list_opt: argument_expression_list
   19                             | %empty

   20 argument_expression_list: assignment_expression
   21                         | argument_expression_list COMMA assignment_expression

   22 unary_expression: postfix_expression
   23                 | UNARY_INCREMENT unary_expression
   24                 | UNARY_DECREMENT unary_expression
   25                 | unary_operator cast_expression
   26                 | SIZEOF unary_expression
   27                 | SIZEOF ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE

   28 unary_operator: BITWISE_AND
   29               | MUL
   30               | PLUS
   31               | MINUS
   32               | COMPLEMENT
   33               | NOT

   34 cast_expression: unary_expression
   35                | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE cast_expression

   36 multiplicative_expression: cast_expression
   37                          | multiplicative_expression MUL cast_expression
   38                          | multiplicative_expression DIV cast_expression
   39                          | multiplicative_expression MOD cast_expression

   40 additive_expression: multiplicative_expression
   41                    | additive_expression PLUS multiplicative_expression
   42                    | additive_expression MINUS multiplicative_expression

   43 shift_expression: additive_expression
   44                 | shift_expression BITWISE_LEFT additive_expression
   45                 | shift_expression BITWISE_RIGHT additive_expression

   46 relational_expression: shift_expression
   47                      | relational_expression LESS_THAN shift_expression
   48                      | relational_expression GREATER_THAN shift_expression
   49                      | relational_expression LESS_EQUAL shift_expression
   50                      | relational_expression GREATER_EQUAL shift_expression

   51 equality_expression: relational_expression
   52                    | equality_expression EQUAL relational_expression
   53                    | equality_expression NOT_EQUAL relational_expression

   54 AND_expression: equality_expression
   55               | AND_expression BITWISE_AND equality_expression

   56 exclusive_OR_expression: AND_expression
   57                        | exclusive_OR_expression XOR AND_expression

   58 inclusive_OR_expression: exclusive_OR_expression
   59                        | inclusive_OR_expression BITWISE_OR exclusive_OR_expression

   60 logical_AND_expression: inclusive_OR_expression
   61                       | logical_AND_expression N LOGICAL_AND M inclusive_OR_expression

   62 logical_OR_expression: logical_AND_expression
   63                      | logical_OR_expression N LOGICAL_OR M logical_AND_expression

   64 conditional_expression: logical_OR_expression
   65                       | logical_OR_expression N QUES_MARK M expression N COLON M conditional_expression

   66 assignment_expression: conditional_expression
   67                      | unary_expression assignment_operator assignment_expression

   68 assignment_operator: ASSIGN
   69                    | MUL_ASSIGN
   70                    | DIV_ASSIGN
   71                    | MOD_ASSIGN
   72                    | PLUS_ASSIGN
   73                    | MINUS_ASSIGN
   74                    | BITWISE_LEFT_ASSIGN
   75                    | BITWISE_RIGHT_ASSIGN
   76                    | BITWISE_AND_ASSIGN
   77                    | XOR_ASSIGN
   78                    | BITWISE_OR_ASSIGN

   79 expression: assignment_expression
   80           | expression COMMA assignment_expression

   81 constant_expression: conditional_expression

   82 declaration: declaration_specifiers init_declarator_list_opt SEMICOLON

   83 init_declarator_list_opt: init_declarator_list
   84                         | %empty

   85 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   86                       | type_specifier declaration_specifiers_opt
   87                       | type_qualifier declaration_specifiers_opt
   88                       | function_specifier declaration_specifiers_opt

   89 declaration_specifiers_opt: declaration_specifiers
   90                           | %empty

   91 init_declarator_list: init_declarator
   92                     | init_declarator_list COMMA init_declarator

   93 init_declarator: declarator
   94                | declarator ASSIGN initializer

   95 storage_class_specifier: EXTERN
   96                        | STATIC

   97 type_specifier: VOID
   98               | CHAR
   99               | SHORT
  100               | INT
  101               | LONG
  102               | FLOAT
  103               | DOUBLE

  104 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  105                         | type_qualifier specifier_qualifier_list_opt

  106 specifier_qualifier_list_opt: specifier_qualifier_list
  107                             | %empty

  108 type_qualifier: CONST
  109               | RESTRICT
  110               | VOLATILE

  111 function_specifier: INLINE

  112 declarator: pointer direct_declarator
  113           | direct_declarator

  114 direct_declarator: IDENTIFIER
  115                  | ROUND_BRACKET_OPEN declarator ROUND_BRACKET_CLOSE
  116                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list assignment_expression SQUARE_BRACKET_CLOSE
  117                  | direct_declarator SQUARE_BRACKET_OPEN assignment_expression SQUARE_BRACKET_CLOSE
  118                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list SQUARE_BRACKET_CLOSE
  119                  | direct_declarator SQUARE_BRACKET_OPEN SQUARE_BRACKET_CLOSE
  120                  | direct_declarator SQUARE_BRACKET_OPEN STATIC type_qualifier_list assignment_expression SQUARE_BRACKET_CLOSE
  121                  | direct_declarator SQUARE_BRACKET_OPEN STATIC assignment_expression SQUARE_BRACKET_CLOSE
  122                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list STATIC assignment_expression SQUARE_BRACKET_CLOSE
  123                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list MUL SQUARE_BRACKET_CLOSE
  124                  | direct_declarator SQUARE_BRACKET_OPEN MUL SQUARE_BRACKET_CLOSE
  125                  | direct_declarator ROUND_BRACKET_OPEN changetable parameter_type_list ROUND_BRACKET_CLOSE
  126                  | direct_declarator ROUND_BRACKET_OPEN changetable ROUND_BRACKET_CLOSE
  127                  | direct_declarator ROUND_BRACKET_OPEN identifier_list ROUND_BRACKET_CLOSE

  128 changetable: %empty

  129 pointer: MUL type_qualifier_list_opt
  130        | MUL type_qualifier_list_opt pointer

  131 type_qualifier_list: type_qualifier
  132                    | type_qualifier_list type_qualifier

  133 type_qualifier_list_opt: type_qualifier_list
  134                        | %empty

  135 parameter_type_list: parameter_list
  136                    | parameter_list COMMA DOTS

  137 parameter_list: parameter_declaration
  138               | parameter_list COMMA parameter_declaration

  139 parameter_declaration: declaration_specifiers declarator
  140                      | declaration_specifiers

  141 identifier_list: IDENTIFIER
  142                | identifier_list COMMA IDENTIFIER

  143 type_name: specifier_qualifier_list

  144 initializer: assignment_expression
  145            | CURLY_BRACKET_OPEN initializer_list CURLY_BRACKET_CLOSE
  146            | CURLY_BRACKET_OPEN initializer_list COMMA CURLY_BRACKET_CLOSE

  147 initializer_list: designation_opt initializer
  148                 | initializer_list COMMA designation_opt initializer

  149 designation: designator_list ASSIGN

  150 designation_opt: designation
  151                | %empty

  152 designator_list: designator
  153                | designator_list designator

  154 designator: SQUARE_BRACKET_OPEN constant_expression SQUARE_BRACKET_CLOSE
  155           | DOT IDENTIFIER

  156 statement: labeled_statement
  157          | compound_statement
  158          | expression_statement
  159          | selection_statement
  160          | iteration_statement
  161          | jump_statement

  162 labeled_statement: IDENTIFIER COLON statement
  163                  | CASE constant_expression COLON statement
  164                  | DEFAULT COLON statement

  165 compound_statement: CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE

  166 block_item_list: block_item
  167                | block_item_list M block_item

  168 block_item: declaration
  169           | statement

  170 block_item_list_opt: block_item_list
  171                    | %empty

  172 expression_statement: expression_opt SEMICOLON

  173 expression_opt: expression
  174               | %empty

  175 selection_statement: IF ROUND_BRACKET_OPEN expression N ROUND_BRACKET_CLOSE M statement N
  176                    | IF ROUND_BRACKET_OPEN expression N ROUND_BRACKET_CLOSE M statement N ELSE M statement
  177                    | SWITCH ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE statement

  178 iteration_statement: WHILE M ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE M statement
  179                    | DO M statement M WHILE ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE SEMICOLON
  180                    | FOR ROUND_BRACKET_OPEN expression_statement M expression_statement ROUND_BRACKET_CLOSE M statement
  181                    | FOR ROUND_BRACKET_OPEN expression_statement M expression_statement M expression N ROUND_BRACKET_CLOSE M statement

  182 jump_statement: GOTO IDENTIFIER SEMICOLON
  183               | CONTINUE SEMICOLON
  184               | BREAK SEMICOLON
  185               | RETURN expression SEMICOLON
  186               | RETURN SEMICOLON

  187 translation_unit: external_declaration
  188                 | translation_unit external_declaration

  189 external_declaration: function_definition
  190                     | declaration

  191 function_definition: declaration_specifiers declarator declaration_list_opt changetable compound_statement

  192 declaration_list: declaration
  193                 | declaration_list declaration

  194 declaration_list_opt: declaration_list
  195                     | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
IDENTIFIER (258) 3 12 13 114 141 142 155 162 182
INTEGER_CONSTANT (259) 4
FLOAT_CONSTANT (260) 5
CHARACTER_CONSTANT (261) 6
STRING_LITERAL (262) 7
ROUND_BRACKET_OPEN (263) 8 11 16 17 27 35 115 125 126 127 175 176 177
    178 179 180 181
ROUND_BRACKET_CLOSE (264) 8 11 16 17 27 35 115 125 126 127 175 176
    177 178 179 180 181
SQUARE_BRACKET_OPEN (265) 10 116 117 118 119 120 121 122 123 124 154
SQUARE_BRACKET_CLOSE (266) 10 116 117 118 119 120 121 122 123 124 154
CURLY_BRACKET_OPEN (267) 16 17 145 146 165
CURLY_BRACKET_CLOSE (268) 16 17 145 146 165
UNARY_INCREMENT (269) 14 23
UNARY_DECREMENT (270) 15 24
NOT (271) 33
MUL (272) 29 37 123 124 129 130
DIV (273) 38
MOD (274) 39
PLUS (275) 30 41
MINUS (276) 31 42
COMPLEMENT (277) 32
XOR (278) 57
DOT (279) 12 155
DOTS (280) 136
COMMA (281) 17 21 80 92 136 138 142 146 148
QUES_MARK (282) 65
COLON (283) 65 162 163 164
SEMICOLON (284) 82 172 179 182 183 184 185 186
IMPLIES (285) 13
HASH (286)
BITWISE_LEFT (287) 44
BITWISE_RIGHT (288) 45
BITWISE_AND (289) 28 55
BITWISE_OR (290) 59
LOGICAL_AND (291) 61
LOGICAL_OR (292) 63
LESS_THAN (293) 47
GREATER_THAN (294) 48
LESS_EQUAL (295) 49
GREATER_EQUAL (296) 50
EQUAL (297) 52
NOT_EQUAL (298) 53
ASSIGN (299) 68 94 149
MUL_ASSIGN (300) 69
DIV_ASSIGN (301) 70
MOD_ASSIGN (302) 71
PLUS_ASSIGN (303) 72
MINUS_ASSIGN (304) 73
BITWISE_LEFT_ASSIGN (305) 74
BITWISE_RIGHT_ASSIGN (306) 75
BITWISE_AND_ASSIGN (307) 76
XOR_ASSIGN (308) 77
BITWISE_OR_ASSIGN (309) 78
EXTERN (310) 95
STATIC (311) 96 120 121 122
VOID (312) 97
CHAR (313) 98
SHORT (314) 99
INT (315) 100
LONG (316) 101
FLOAT (317) 102
DOUBLE (318) 103
CONST (319) 108
RESTRICT (320) 109
VOLATILE (321) 110
INLINE (322) 111
SIZEOF (323) 26 27
TYPEDEF (324)
UNION (325)
STRUCT (326)
CASE (327) 163
DEFAULT (328) 164
IF (329) 175 176
ELSE (330) 176
SWITCH (331) 177
WHILE (332) 178 179
DO (333) 179
FOR (334) 180 181
GOTO (335) 182
CONTINUE (336) 183
BREAK (337) 184
RETURN (338) 185 186
"LOWER_THAN_ELSE" (339)


Nonterminals, with rules where they appear

$accept (85)
    on left: 0
M (86)
    on left: 1, on right: 61 63 65 167 175 176 178 179 180 181
N (87)
    on left: 2, on right: 61 63 65 175 176 181
primary_expression (88)
    on left: 3 4 5 6 7 8, on right: 9
postfix_expression (89)
    on left: 9 10 11 12 13 14 15 16 17, on right: 10 11 12 13 14 15
    22
argument_expression_list_opt (90)
    on left: 18 19, on right: 11
argument_expression_list (91)
    on left: 20 21, on right: 18 21
unary_expression (92)
    on left: 22 23 24 25 26 27, on right: 23 24 26 34 67
unary_operator (93)
    on left: 28 29 30 31 32 33, on right: 25
cast_expression (94)
    on left: 34 35, on right: 25 35 36 37 38 39
multiplicative_expression (95)
    on left: 36 37 38 39, on right: 37 38 39 40 41 42
additive_expression (96)
    on left: 40 41 42, on right: 41 42 43 44 45
shift_expression (97)
    on left: 43 44 45, on right: 44 45 46 47 48 49 50
relational_expression (98)
    on left: 46 47 48 49 50, on right: 47 48 49 50 51 52 53
equality_expression (99)
    on left: 51 52 53, on right: 52 53 54 55
AND_expression (100)
    on left: 54 55, on right: 55 56 57
exclusive_OR_expression (101)
    on left: 56 57, on right: 57 58 59
inclusive_OR_expression (102)
    on left: 58 59, on right: 59 60 61
logical_AND_expression (103)
    on left: 60 61, on right: 61 62 63
logical_OR_expression (104)
    on left: 62 63, on right: 63 64 65
conditional_expression (105)
    on left: 64 65, on right: 65 66 81
assignment_expression (106)
    on left: 66 67, on right: 20 21 67 79 80 116 117 120 121 122 144
assignment_operator (107)
    on left: 68 69 70 71 72 73 74 75 76 77 78, on right: 67
expression (108)
    on left: 79 80, on right: 8 10 65 80 173 175 176 177 178 179 181
    185
constant_expression (109)
    on left: 81, on right: 154 163
declaration (110)
    on left: 82, on right: 168 190 192 193
init_declarator_list_opt (111)
    on left: 83 84, on right: 82
declaration_specifiers (112)
    on left: 85 86 87 88, on right: 82 89 139 140 191
declaration_specifiers_opt (113)
    on left: 89 90, on right: 85 86 87 88
init_declarator_list (114)
    on left: 91 92, on right: 83 92
init_declarator (115)
    on left: 93 94, on right: 91 92
storage_class_specifier (116)
    on left: 95 96, on right: 85
type_specifier (117)
    on left: 97 98 99 100 101 102 103, on right: 86 104
specifier_qualifier_list (118)
    on left: 104 105, on right: 106 143
specifier_qualifier_list_opt (119)
    on left: 106 107, on right: 104 105
type_qualifier (120)
    on left: 108 109 110, on right: 87 105 131 132
function_specifier (121)
    on left: 111, on right: 88
declarator (122)
    on left: 112 113, on right: 93 94 115 139 191
direct_declarator (123)
    on left: 114 115 116 117 118 119 120 121 122 123 124 125 126 127,
    on right: 112 113 116 117 118 119 120 121 122 123 124 125 126 127
changetable (124)
    on left: 128, on right: 125 126 191
pointer (125)
    on left: 129 130, on right: 112 130
type_qualifier_list (126)
    on left: 131 132, on right: 116 118 120 122 123 132 133
type_qualifier_list_opt (127)
    on left: 133 134, on right: 129 130
parameter_type_list (128)
    on left: 135 136, on right: 125
parameter_list (129)
    on left: 137 138, on right: 135 136 138
parameter_declaration (130)
    on left: 139 140, on right: 137 138
identifier_list (131)
    on left: 141 142, on right: 127 142
type_name (132)
    on left: 143, on right: 16 17 27 35
initializer (133)
    on left: 144 145 146, on right: 94 147 148
initializer_list (134)
    on left: 147 148, on right: 16 17 145 146 148
designation (135)
    on left: 149, on right: 150
designation_opt (136)
    on left: 150 151, on right: 147 148
designator_list (137)
    on left: 152 153, on right: 149 153
designator (138)
    on left: 154 155, on right: 152 153
statement (139)
    on left: 156 157 158 159 160 161, on right: 162 163 164 169 175
    176 177 178 179 180 181
labeled_statement (140)
    on left: 162 163 164, on right: 156
compound_statement (141)
    on left: 165, on right: 157 191
block_item_list (142)
    on left: 166 167, on right: 167 170
block_item (143)
    on left: 168 169, on right: 166 167
block_item_list_opt (144)
    on left: 170 171, on right: 165
expression_statement (145)
    on left: 172, on right: 158 180 181
expression_opt (146)
    on left: 173 174, on right: 172
selection_statement (147)
    on left: 175 176 177, on right: 159
iteration_statement (148)
    on left: 178 179 180 181, on right: 160
jump_statement (149)
    on left: 182 183 184 185 186, on right: 161
translation_unit (150)
    on left: 187 188, on right: 0 188
external_declaration (151)
    on left: 189 190, on right: 187 188
function_definition (152)
    on left: 191, on right: 189
declaration_list (153)
    on left: 192 193, on right: 193 194
declaration_list_opt (154)
    on left: 194 195, on right: 191


State 0

    0 $accept: . translation_unit $end

    EXTERN    shift, and go to state 1
    STATIC    shift, and go to state 2
    VOID      shift, and go to state 3
    CHAR      shift, and go to state 4
    SHORT     shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    FLOAT     shift, and go to state 8
    DOUBLE    shift, and go to state 9
    CONST     shift, and go to state 10
    RESTRICT  shift, and go to state 11
    VOLATILE  shift, and go to state 12
    INLINE    shift, and go to state 13

    declaration              go to state 14
    declaration_specifiers   go to state 15
    storage_class_specifier  go to state 16
    type_specifier           go to state 17
    type_qualifier           go to state 18
    function_specifier       go to state 19
    translation_unit         go to state 20
    external_declaration     go to state 21
    function_definition      go to state 22


State 1

   95 storage_class_specifier: EXTERN .

    $default  reduce using rule 95 (storage_class_specifier)


State 2

   96 storage_class_specifier: STATIC .

    $default  reduce using rule 96 (storage_class_specifier)


State 3

   97 type_specifier: VOID .

    $default  reduce using rule 97 (type_specifier)


State 4

   98 type_specifier: CHAR .

    $default  reduce using rule 98 (type_specifier)


State 5

   99 type_specifier: SHORT .

    $default  reduce using rule 99 (type_specifier)


State 6

  100 type_specifier: INT .

    $default  reduce using rule 100 (type_specifier)


State 7

  101 type_specifier: LONG .

    $default  reduce using rule 101 (type_specifier)


State 8

  102 type_specifier: FLOAT .

    $default  reduce using rule 102 (type_specifier)


State 9

  103 type_specifier: DOUBLE .

    $default  reduce using rule 103 (type_specifier)


State 10

  108 type_qualifier: CONST .

    $default  reduce using rule 108 (type_qualifier)


State 11

  109 type_qualifier: RESTRICT .

    $default  reduce using rule 109 (type_qualifier)


State 12

  110 type_qualifier: VOLATILE .

    $default  reduce using rule 110 (type_qualifier)


State 13

  111 function_specifier: INLINE .

    $default  reduce using rule 111 (function_specifier)


State 14

  190 external_declaration: declaration .

    $default  reduce using rule 190 (external_declaration)


State 15

   82 declaration: declaration_specifiers . init_declarator_list_opt SEMICOLON
  191 function_definition: declaration_specifiers . declarator declaration_list_opt changetable compound_statement

    IDENTIFIER          shift, and go to state 23
    ROUND_BRACKET_OPEN  shift, and go to state 24
    MUL                 shift, and go to state 25

    $default  reduce using rule 84 (init_declarator_list_opt)

    init_declarator_list_opt  go to state 26
    init_declarator_list      go to state 27
    init_declarator           go to state 28
    declarator                go to state 29
    direct_declarator         go to state 30
    pointer                   go to state 31


State 16

   85 declaration_specifiers: storage_class_specifier . declaration_specifiers_opt

    EXTERN    shift, and go to state 1
    STATIC    shift, and go to state 2
    VOID      shift, and go to state 3
    CHAR      shift, and go to state 4
    SHORT     shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    FLOAT     shift, and go to state 8
    DOUBLE    shift, and go to state 9
    CONST     shift, and go to state 10
    RESTRICT  shift, and go to state 11
    VOLATILE  shift, and go to state 12
    INLINE    shift, and go to state 13

    $default  reduce using rule 90 (declaration_specifiers_opt)

    declaration_specifiers      go to state 32
    declaration_specifiers_opt  go to state 33
    storage_class_specifier     go to state 16
    type_specifier              go to state 17
    type_qualifier              go to state 18
    function_specifier          go to state 19


State 17

   86 declaration_specifiers: type_specifier . declaration_specifiers_opt

    EXTERN    shift, and go to state 1
    STATIC    shift, and go to state 2
    VOID      shift, and go to state 3
    CHAR      shift, and go to state 4
    SHORT     shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    FLOAT     shift, and go to state 8
    DOUBLE    shift, and go to state 9
    CONST     shift, and go to state 10
    RESTRICT  shift, and go to state 11
    VOLATILE  shift, and go to state 12
    INLINE    shift, and go to state 13

    $default  reduce using rule 90 (declaration_specifiers_opt)

    declaration_specifiers      go to state 32
    declaration_specifiers_opt  go to state 34
    storage_class_specifier     go to state 16
    type_specifier              go to state 17
    type_qualifier              go to state 18
    function_specifier          go to state 19


State 18

   87 declaration_specifiers: type_qualifier . declaration_specifiers_opt

    EXTERN    shift, and go to state 1
    STATIC    shift, and go to state 2
    VOID      shift, and go to state 3
    CHAR      shift, and go to state 4
    SHORT     shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    FLOAT     shift, and go to state 8
    DOUBLE    shift, and go to state 9
    CONST     shift, and go to state 10
    RESTRICT  shift, and go to state 11
    VOLATILE  shift, and go to state 12
    INLINE    shift, and go to state 13

    $default  reduce using rule 90 (declaration_specifiers_opt)

    declaration_specifiers      go to state 32
    declaration_specifiers_opt  go to state 35
    storage_class_specifier     go to state 16
    type_specifier              go to state 17
    type_qualifier              go to state 18
    function_specifier          go to state 19


State 19

   88 declaration_specifiers: function_specifier . declaration_specifiers_opt

    EXTERN    shift, and go to state 1
    STATIC    shift, and go to state 2
    VOID      shift, and go to state 3
    CHAR      shift, and go to state 4
    SHORT     shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    FLOAT     shift, and go to state 8
    DOUBLE    shift, and go to state 9
    CONST     shift, and go to state 10
    RESTRICT  shift, and go to state 11
    VOLATILE  shift, and go to state 12
    INLINE    shift, and go to state 13

    $default  reduce using rule 90 (declaration_specifiers_opt)

    declaration_specifiers      go to state 32
    declaration_specifiers_opt  go to state 36
    storage_class_specifier     go to state 16
    type_specifier              go to state 17
    type_qualifier              go to state 18
    function_specifier          go to state 19


State 20

    0 $accept: translation_unit . $end
  188 translation_unit: translation_unit . external_declaration

    $end      shift, and go to state 37
    EXTERN    shift, and go to state 1
    STATIC    shift, and go to state 2
    VOID      shift, and go to state 3
    CHAR      shift, and go to state 4
    SHORT     shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    FLOAT     shift, and go to state 8
    DOUBLE    shift, and go to state 9
    CONST     shift, and go to state 10
    RESTRICT  shift, and go to state 11
    VOLATILE  shift, and go to state 12
    INLINE    shift, and go to state 13

    declaration              go to state 14
    declaration_specifiers   go to state 15
    storage_class_specifier  go to state 16
    type_specifier           go to state 17
    type_qualifier           go to state 18
    function_specifier       go to state 19
    external_declaration     go to state 38
    function_definition      go to state 22


State 21

  187 translation_unit: external_declaration .

    $default  reduce using rule 187 (translation_unit)


State 22

  189 external_declaration: function_definition .

    $default  reduce using rule 189 (external_declaration)


State 23

  114 direct_declarator: IDENTIFIER .

    $default  reduce using rule 114 (direct_declarator)


State 24

  115 direct_declarator: ROUND_BRACKET_OPEN . declarator ROUND_BRACKET_CLOSE

    IDENTIFIER          shift, and go to state 23
    ROUND_BRACKET_OPEN  shift, and go to state 24
    MUL                 shift, and go to state 25

    declarator         go to state 39
    direct_declarator  go to state 30
    pointer            go to state 31


State 25

  129 pointer: MUL . type_qualifier_list_opt
  130        | MUL . type_qualifier_list_opt pointer

    CONST     shift, and go to state 10
    RESTRICT  shift, and go to state 11
    VOLATILE  shift, and go to state 12

    $default  reduce using rule 134 (type_qualifier_list_opt)

    type_qualifier           go to state 40
    type_qualifier_list      go to state 41
    type_qualifier_list_opt  go to state 42


State 26

   82 declaration: declaration_specifiers init_declarator_list_opt . SEMICOLON

    SEMICOLON  shift, and go to state 43


State 27

   83 init_declarator_list_opt: init_declarator_list .
   92 init_declarator_list: init_declarator_list . COMMA init_declarator

    COMMA  shift, and go to state 44

    $default  reduce using rule 83 (init_declarator_list_opt)


State 28

   91 init_declarator_list: init_declarator .

    $default  reduce using rule 91 (init_declarator_list)


State 29

   93 init_declarator: declarator .
   94                | declarator . ASSIGN initializer
  191 function_definition: declaration_specifiers declarator . declaration_list_opt changetable compound_statement

    ASSIGN    shift, and go to state 45
    EXTERN    shift, and go to state 1
    STATIC    shift, and go to state 2
    VOID      shift, and go to state 3
    CHAR      shift, and go to state 4
    SHORT     shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    FLOAT     shift, and go to state 8
    DOUBLE    shift, and go to state 9
    CONST     shift, and go to state 10
    RESTRICT  shift, and go to state 11
    VOLATILE  shift, and go to state 12
    INLINE    shift, and go to state 13

    CURLY_BRACKET_OPEN  reduce using rule 195 (declaration_list_opt)
    $default            reduce using rule 93 (init_declarator)

    declaration              go to state 46
    declaration_specifiers   go to state 47
    storage_class_specifier  go to state 16
    type_specifier           go to state 17
    type_qualifier           go to state 18
    function_specifier       go to state 19
    declaration_list         go to state 48
    declaration_list_opt     go to state 49


State 30

  113 declarator: direct_declarator .
  116 direct_declarator: direct_declarator . SQUARE_BRACKET_OPEN type_qualifier_list assignment_expression SQUARE_BRACKET_CLOSE
  117                  | direct_declarator . SQUARE_BRACKET_OPEN assignment_expression SQUARE_BRACKET_CLOSE
  118                  | direct_declarator . SQUARE_BRACKET_OPEN type_qualifier_list SQUARE_BRACKET_CLOSE
  119                  | direct_declarator . SQUARE_BRACKET_OPEN SQUARE_BRACKET_CLOSE
  120                  | direct_declarator . SQUARE_BRACKET_OPEN STATIC type_qualifier_list assignment_expression SQUARE_BRACKET_CLOSE
  121                  | direct_declarator . SQUARE_BRACKET_OPEN STATIC assignment_expression SQUARE_BRACKET_CLOSE
  122                  | direct_declarator . SQUARE_BRACKET_OPEN type_qualifier_list STATIC assignment_expression SQUARE_BRACKET_CLOSE
  123                  | direct_declarator . SQUARE_BRACKET_OPEN type_qualifier_list MUL SQUARE_BRACKET_CLOSE
  124                  | direct_declarator . SQUARE_BRACKET_OPEN MUL SQUARE_BRACKET_CLOSE
  125                  | direct_declarator . ROUND_BRACKET_OPEN changetable parameter_type_list ROUND_BRACKET_CLOSE
  126                  | direct_declarator . ROUND_BRACKET_OPEN changetable ROUND_BRACKET_CLOSE
  127                  | direct_declarator . ROUND_BRACKET_OPEN identifier_list ROUND_BRACKET_CLOSE

    ROUND_BRACKET_OPEN   shift, and go to state 50
    SQUARE_BRACKET_OPEN  shift, and go to state 51

    $default  reduce using rule 113 (declarator)


State 31

  112 declarator: pointer . direct_declarator

    IDENTIFIER          shift, and go to state 23
    ROUND_BRACKET_OPEN  shift, and go to state 24

    direct_declarator  go to state 52


State 32

   89 declaration_specifiers_opt: declaration_specifiers .

    $default  reduce using rule 89 (declaration_specifiers_opt)


State 33

   85 declaration_specifiers: storage_class_specifier declaration_specifiers_opt .

    $default  reduce using rule 85 (declaration_specifiers)


State 34

   86 declaration_specifiers: type_specifier declaration_specifiers_opt .

    $default  reduce using rule 86 (declaration_specifiers)


State 35

   87 declaration_specifiers: type_qualifier declaration_specifiers_opt .

    $default  reduce using rule 87 (declaration_specifiers)


State 36

   88 declaration_specifiers: function_specifier declaration_specifiers_opt .

    $default  reduce using rule 88 (declaration_specifiers)


State 37

    0 $accept: translation_unit $end .

    $default  accept


State 38

  188 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 188 (translation_unit)


State 39

  115 direct_declarator: ROUND_BRACKET_OPEN declarator . ROUND_BRACKET_CLOSE

    ROUND_BRACKET_CLOSE  shift, and go to state 53


State 40

  131 type_qualifier_list: type_qualifier .

    $default  reduce using rule 131 (type_qualifier_list)


State 41

  132 type_qualifier_list: type_qualifier_list . type_qualifier
  133 type_qualifier_list_opt: type_qualifier_list .

    CONST     shift, and go to state 10
    RESTRICT  shift, and go to state 11
    VOLATILE  shift, and go to state 12

    $default  reduce using rule 133 (type_qualifier_list_opt)

    type_qualifier  go to state 54


State 42

  129 pointer: MUL type_qualifier_list_opt .
  130        | MUL type_qualifier_list_opt . pointer

    MUL  shift, and go to state 25

    $default  reduce using rule 129 (pointer)

    pointer  go to state 55


State 43

   82 declaration: declaration_specifiers init_declarator_list_opt SEMICOLON .

    $default  reduce using rule 82 (declaration)


State 44

   92 init_declarator_list: init_declarator_list COMMA . init_declarator

    IDENTIFIER          shift, and go to state 23
    ROUND_BRACKET_OPEN  shift, and go to state 24
    MUL                 shift, and go to state 25

    init_declarator    go to state 56
    declarator         go to state 57
    direct_declarator  go to state 30
    pointer            go to state 31


State 45

   94 init_declarator: declarator ASSIGN . initializer

    IDENTIFIER          shift, and go to state 58
    INTEGER_CONSTANT    shift, and go to state 59
    FLOAT_CONSTANT      shift, and go to state 60
    CHARACTER_CONSTANT  shift, and go to state 61
    STRING_LITERAL      shift, and go to state 62
    ROUND_BRACKET_OPEN  shift, and go to state 63
    CURLY_BRACKET_OPEN  shift, and go to state 64
    UNARY_INCREMENT     shift, and go to state 65
    UNARY_DECREMENT     shift, and go to state 66
    NOT                 shift, and go to state 67
    MUL                 shift, and go to state 68
    PLUS                shift, and go to state 69
    MINUS               shift, and go to state 70
    COMPLEMENT          shift, and go to state 71
    BITWISE_AND         shift, and go to state 72
    SIZEOF              shift, and go to state 73

    primary_expression         go to state 74
    postfix_expression         go to state 75
    unary_expression           go to state 76
    unary_operator             go to state 77
    cast_expression            go to state 78
    multiplicative_expression  go to state 79
    additive_expression        go to state 80
    shift_expression           go to state 81
    relational_expression      go to state 82
    equality_expression        go to state 83
    AND_expression             go to state 84
    exclusive_OR_expression    go to state 85
    inclusive_OR_expression    go to state 86
    logical_AND_expression     go to state 87
    logical_OR_expression      go to state 88
    conditional_expression     go to state 89
    assignment_expression      go to state 90
    initializer                go to state 91


State 46

  192 declaration_list: declaration .

    $default  reduce using rule 192 (declaration_list)


State 47

   82 declaration: declaration_specifiers . init_declarator_list_opt SEMICOLON
